--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/k-dylan/showreel/issues"
   },
-  "homepage": "https://github.com/k-dylan/showreel#readme"
+  "homepage": "https://github.com/k-dylan/showreel#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-connect": "^4.0.0"
+  }
 }
